GH-743 Change approach to open operating system browser
The previous approach relied on PlatformUI.getWorkbench().getBrowserSupport().getExternalBrowser().openURL(),
which opens the default handler of .html files (at least in Windows).

This is replaced by a hopefully more reliable approach to open the operating
system's browser using java.awt.Desktop.

Closes https://github.com/eclipse-glsp/glsp/issues/743

Signed-off-by: Olaf Lessenich <olessenich@eclipsesource.com>